# Log

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE  Log.sln  README.md
Core/: CMakeLists.txt
Core/Source/Private/: CallStack.cpp
Core/Source/Public/: Build.h  CallStack.h  Compiler.h  Core.h  IO.h  Module.h  Platform.h  Type.h
Example/Source/: CMakeLists.txt  Example.cpp
Log/: CMakeLists.txt  ExampleUsage.cpp  Log.cpp  Log.h  Log.vcxproj  Log.vcxproj.filters
Log/Source/: CMakeLists.txt
Log/Source/Private/: Logger.cpp
Log/Source/Public/: Log.h  LogCategory.h  Logger.h  Module.h
Source/: CMakeLists.txt  Log.cpp
